--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "auth0-js": "^9.11.3",
+    "axios": "^0.19.2",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "material-icons": "^0.3.1",
