--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,9 +1,11 @@
 .DS_Store
 node_modules
 package-lock.json
-
+# /dist
 
 # local env files
+# .env.local
+# .env.*.local
 
 # Log files
 npm-debug.log*
