--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
     "mongoose": "^5.9.25",
+    "multer": "^1.4.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
