--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
+    "jquery": "^3.5.1",
     "material-icons": "^0.3.1",
     "prismjs": "^1.17.1",
     "vue": "^2.6.10",
