--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "core-js": "^2.6.5",
     "material-icons": "^0.3.1",
     "prismjs": "^1.17.1",
+    "vee-validate": "^3.3.7",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-prism-component": "^1.1.1",
