--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "jquery": "^3.5.1",
     "material-icons": "^0.3.1",
     "prismjs": "^1.17.1",
+    "twilio": "^3.48.1",
+    "twilio-video": "^2.7.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-prism-component": "^1.1.1",
