--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 URI = mongodb+srv://hackhealthy:hackhealthy@hack-healthy-cluster.eixvm.mongodb.net/hackhealthy?retryWrites=true&w=majority
+TWILIO_ACCOUNT_SID=ACaeebc2131d8b482a99b2fd8e0652bdbc
+TWILIO_API_KEY=SK5104ecf3c8c568b1dbde5673aa5f8916
+TWILIO_API_SECRET=4KZy5xtEcq50TutPMda0OTCiJeZoMScT
