--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,11 @@
     "axios": "^0.19.2",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
+    "jquery": "^3.5.1",
     "material-icons": "^0.3.1",
     "prismjs": "^1.17.1",
+    "twilio": "^3.48.1",
+    "twilio-video": "^2.7.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-prism-component": "^1.1.1",
