--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,11 +1,11 @@
 .DS_Store
 node_modules
 package-lock.json
-/dist
+# /dist
 
 # local env files
-.env.local
-.env.*.local
+# .env.local
+# .env.*.local
 
 # Log files
 npm-debug.log*
