--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ TWILIO_API_SECRET=4KZy5xtEcq50TutPMda0OTCiJeZoMScT
 CLOUD_NAME=dfx9vjikd
 CLOUDINARY_API_KEY=616666164425751
 CLOUDINARY_API_SECRET=Z39tuW5Ed2Vx74dgiKUsII8YvZw
+
+ENVIRONMENT = dev
+APP_URL = http://localhost:3000
+PORT = 3000
