--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-APP_VUE_ENVIRONMENT= dev
-APP_VUE_BACKEND_URL = http://localhost:3000
+VUE_APP_ENVIRONMENT= dev
+VUE_APP_BACKEND_URL = http://localhost:3000
