--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/vue": "^5.1.0",
     "auth0-js": "^9.11.3",
     "axios": "^0.19.2",
+    "buttercms": "^1.2.3",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "jquery": "^3.5.1",
@@ -27,6 +28,7 @@
     "vue-chartjs": "^3.4.2",
     "vue-prism-component": "^1.1.1",
     "vue-router": "^3.1.3",
+    "vue-summernote": "^1.0.3",
     "vuelidate": "^0.7.5",
     "vuesax": "^3.10.2",
     "vuex": "^3.1.1"
