--- a/client/.gitignore
+++ b/client/.gitignore
@@ -5,9 +5,9 @@ package-lock.json
 
 
 # local env files
-# .env.local
-# .env.*.local
-# .env
+.env.local
+.env.*.local
+.env
 
 # Log files
 npm-debug.log*
