--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ URI = mongodb+srv://hackhealthy:hackhealthy@hack-healthy-cluster.eixvm.mongodb.n
 CLOUD_NAME=dfx9vjikd
 CLOUDINARY_API_KEY=616666164425751
 CLOUDINARY_API_SECRET=Z39tuW5Ed2Vx74dgiKUsII8YvZw
+USER=hackhealthyclinic@gmail.com
+PASS=hack-healthy1
