--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 package-lock.json
 /node_modules
-.env
-*.env
-.env.local
-.env.*.local
-dist
+# .env
+# *.env
+# .env.local
+# .env.*.local
+# dist
