--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,14 +1,14 @@
 .DS_Store
 node_modules
 package-lock.json
-/dist
-dist
+# /dist
+# dist
 
 
 # local env files
-.env.local
-.env.*.local
-.env
+# .env.local
+# .env.*.local
+# .env
 
 # Log files
 npm-debug.log*
