patient create post and forum view ready

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ CLOUDINARY_API_KEY=616666164425751
 CLOUDINARY_API_SECRET=Z39tuW5Ed2Vx74dgiKUsII8YvZw
 USER=hackhealthyclinic@gmail.com
 PASS=hack-healthy1
+TWILIO_ACCOUNT_SID=ACaeebc2131d8b482a99b2fd8e0652bdbc
+TWILIO_API_KEY=SK5104ecf3c8c568b1dbde5673aa5f8916
+TWILIO_API_SECRET=4KZy5xtEcq50TutPMda0OTCiJeZoMScT
