--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "vue-prism-component": "^1.1.1",
     "vue-router": "^3.1.3",
     "vue-summernote": "^1.0.3",
+    "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.5",
     "vuesax": "^3.10.2",
     "vuex": "^3.1.1"
