--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/daygrid": "^5.1.0",
     "@fullcalendar/interaction": "^5.1.0",
     "@fullcalendar/vue": "^5.1.0",
+    "@googlemaps/google-maps-services-js": "^3.1.5",
     "auth0-js": "^9.11.3",
     "aws-sdk": "^2.720.0",
     "axios": "^0.19.2",
@@ -31,9 +32,11 @@
     "vee-validate": "^3.3.7",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
+    "vue-gmaps": "^0.2.2",
     "vue-prism-component": "^1.1.1",
     "vue-router": "^3.1.3",
     "vue-summernote": "^1.0.3",
+    "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.5",
     "vuesax": "^3.10.2",
     "vuex": "^3.1.1"
@@ -45,8 +48,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "sass-loader": "^8.0.0",
     "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "vue-browser-geolocation": "^1.8.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
