--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "material-icons": "^0.3.1",
     "prismjs": "^1.17.1",
     "rumble-charts": "^3.1.2",
+    "springedge": "^1.0.5",
     "twilio": "^3.48.1",
     "twilio-video": "^2.7.0",
     "vee-validate": "^3.3.7",
