--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "path": "^0.12.7",
+    "springedge": "^1.0.5",
     "twilio": "^3.48.0",
     "twilio-video": "^2.7.0",
     "vue": "^2.6.11"
