--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "jquery": "^3.5.1",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.6",
     "jwt-decode": "^2.2.0",
     "material-icons": "^0.3.1",
     "prismjs": "^1.17.1",
