--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ PASS=hack-healthy1
 TWILIO_ACCOUNT_SID=ACaeebc2131d8b482a99b2fd8e0652bdbc
 TWILIO_API_KEY=SK5104ecf3c8c568b1dbde5673aa5f8916
 TWILIO_API_SECRET=4KZy5xtEcq50TutPMda0OTCiJeZoMScT
+ACCOUNT_SID=ACb51923162c220d6b86e3ad4c116620c7
+AUTH_TOKEN=69950d0c1c1ffd599e0a9eb6a8aa052a
