moments js done in forum

--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "jspdf-autotable": "^3.5.6",
     "jwt-decode": "^2.2.0",
     "material-icons": "^0.3.1",
+    "moment": "^2.27.0",
     "prismjs": "^1.17.1",
     "rumble-charts": "^3.1.2",
     "springedge": "^1.0.5",
