--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-handlebars": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
