--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "path": "^0.12.7",
+    "socket.io": "^2.3.0",
     "springedge": "^1.0.5",
     "telesignsdk": "^2.2.1",
     "twilio": "^3.48.2",
