--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.27.0",
     "prismjs": "^1.17.1",
     "rumble-charts": "^3.1.2",
+    "socket.io": "^2.3.0",
     "springedge": "^1.0.5",
     "telesignsdk": "^2.2.1",
     "twilio": "^3.48.2",
